# canonical-huffman-archiver

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  conanfile.py  docker-compose.yaml  pyproject.toml
.github/workflows/: quality.yaml  release.yaml
src/: CMakeLists.txt  archiver.cc  archiver.h  filereader.cc  filereader.h  filewriter.cc  filewriter.h  huffman.cc  huffman.h  main.cc  trie.cc  trie.h
tests/: CMakeLists.txt  test_1.txt  test_2.txt  test_archiver.cc  test_file.cc  test_huffman.cc
